--- a/src/app/main/header/header.component.scss
+++ b/src/app/main/header/header.component.scss
@@ -1,41 +1,45 @@
-mat-sidenav-container, mat-sidenav-content, mat-sidenav {
-    height: 100%;
-  }
+@import 'variable';
+
+.navbar {
+    background-color: var(--secondary-color);
+    height: 90px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: $header-height;
+    padding: 0 $padding-big;
+    position: relative;
+   
+    .logo-link {
+        margin-right: auto;
+        height: 70%;
+    }
+
+    .logo {
+        width: auto;
+        height: 100%;
+    }
+
+    ul {
+        display: flex;
+        margin: 0 $padding-medium;
+    }
   
-  mat-sidenav {
-    width: 250px;
-  }
+    li {
+        padding: $padding-smallest;
+        font-size: $font-default;
+
+        a:hover {
+            border-bottom: 2px var(--primary-green) solid;
+        }
+    }
+
+    .contact-number{
+        span{
+            color: var(--primary-green);
+            font-size: $font-heading;
+        }
+    }
+
+}
   
-  a {
-    text-decoration: none;
-    color: white;
-  }
-  
-  a:hover,
-  a:active {
-    color: lightgray;
-  }
-  
-  .navigation-items {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
-  }
-  
-  .icon {
-    display: inline-block;
-    height: 30px;
-    margin: 0 auto;
-    padding-right: 5px;
-    text-align: center;
-    vertical-align: middle;
-    width: 15%;
-  }
-  
-  .label {
-    display: inline-block;
-    line-height: 30px;
-    margin: 0;
-    width: 85%;
-  }
