--- a/src/global-styles/_utilities.scss
+++ b/src/global-styles/_utilities.scss
@@ -7,15 +7,6 @@
   padding: 0 $padding-big;
 }
 
-.card {
-  background-color: #fff;
-  color: #333;
-  border-radius: 10px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  margin: 10px;
-}
-
 .btn {
   display: inline-block;
   padding: 10px 30px;
@@ -38,7 +29,7 @@
 /* Backgrounds & colored buttons */
 .bg-primary,
 .btn-primary {
-  background-color: var(--primary-color);
+  background-color: red;
   color: #fff;
 }
 
